<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_notes">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.aisletest.ui.Discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.aisletest.ui.Notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_matches"
        android:name="com.example.aisletest.ui.Matches.MatchesFragment"
        android:label="@string/title_matches"
        tools:layout="@layout/fragment_matches" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.aisletest.ui.Profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>