<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AuthScreen1Activity">

    <TextView
        android:id="@+id/get_otp"
        android:layout_width="73dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:text="@string/get_otp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/enter_your_"
        android:layout_width="220dp"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="86dp"
        android:textStyle="bold"
        android:text="@string/Enter_phone_umber"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="top"
        />


    <EditText
        android:id="@+id/country_code"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:padding="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="phone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"
        android:background="@drawable/rectangle_1"
        />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="147dp"
        android:layout_height="36dp"
        android:padding="5dp"
        android:maxLength="10"
        android:textSize="18sp"
        android:textStyle="bold"
        android:inputType="phone"
        android:layout_alignParentStart="true"
        android:layout_marginStart="103dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"
        android:background="@drawable/rectangle_2"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="225dp"
        android:background="@drawable/rectangle_3"
        android:text="@string/continue_button_text"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />



</RelativeLayout>